--- a/indexp.html
+++ b/indexp.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio|Prohects</title>
+    <title>Portfolio|Projects</title>
     <link rel="shortcut icon" href="./favicon_io (1)/favicon-16x16.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="stylep.css">
@@ -17,7 +17,7 @@
             <i class="ri-close-line"></i>
             <img src="./asadlogo.png" alt="">
             <a href="./index.html"><h5>arbaz</h5></a>
-            <a href="./index.html"><h6>front end developer</h6></a>
+            <a href="./index.html"><h6>full stack developer</h6></a>
         </div>
         <div class="navrows">
             <div class="rows">
@@ -37,7 +37,7 @@
             <a href="https://www.linkedin.com/in/arbaz-khan-73910023a/">
                 <i class="ri-linkedin-fill"></i>
             </a>
-            <a href="https://github.com/Arbazkhan7547">
+            <a href="https://github.com/asadKhan202369">
                 <i class="ri-github-fill"></i>
             </a>
             <a href="https://www.instagram.com/khan_sahab_ak_12_/">
@@ -57,7 +57,7 @@
                 <div id="logo">
                     <img src="./asadlogo.png" alt="">
                     <a href="./index.html"><h5>arbaz</h5></a>
-                    <a href="./index.html"><h6>front end developer</h6></a>
+                    <a href="./index.html"><h6>full stack developer</h6></a>
                 </div>
                 <div class="navrows">
                     <div class="rows">
@@ -77,7 +77,7 @@
                     <a href="https://www.linkedin.com/in/arbaz-khan-73910023a/">
                         <i class="ri-linkedin-fill"></i>
                     </a>
-                    <a href="https://github.com/Arbazkhan7547">
+                    <a href="https://github.com/asadKhan202369">
                         <i class="ri-github-fill"></i>
                     </a>
                     <a href="https://www.instagram.com/khan_sahab_ak_12_/">
@@ -91,60 +91,61 @@
                     <i id="menu"  class="ri-menu-line"></i>
                 </div>
                 <div id="artworks">
-                    <a target="_blank" href="https://arbazkhan7547.github.io/z/">
+                    <a target="_blank" href="https://github.com/asadKhan202369/MyDrive">
+                        <h4>2023</h4>
+                        <h5>My Drive</h5>
+                        <h6>A File Management Platform</h6>
+                        <div id="sliding-div"></div>
+                    </a>
+                    <a target="_blank" href="/https://github.com/asadKhan202369/renter">
+                        <h4>2023</h4>
+                        <h5>Shery Ride</h5>
+                        <h6>A Vehicle Rentel Website</h6>
+                        <div id="sliding-div"></div>
+                    </a>
+                    <a target="_blank" href="https://github.com/asadKhan202369/Books">
+                        <h4>2023</h4>
+                        <h5>Bocker</h5>
+                        <h6>A Book Exchanging Projects</h6>
+                        <div id="sliding-div"></div>
+                    </a>
+                    <a target="_blank" href="https://asadkhan202369.github.io/ZDesign/">
                         <h4>2022</h4>
                         <h5>Zorro Design</h5>
                         <h6>Creative Digital Agency</h6>
                         <div id="sliding-div"></div>
                     </a>
-                    <a target="_blank" href="https://arbazkhan7547.github.io/Display-Care/">
+                    <a target="_blank" href="https://asadkhan202369.github.io/Display/">
                         <h4>2022</h4>
                         <h5>Display</h5>
                         <h6>Care Oriented Design Studio</h6>
                         <div id="sliding-div"></div>
                     </a>
-                    <a target="_blank" href=" https://arbazkhan7547.github.io/Martin-Briceno/">
+                    <a target="_blank" href="https://asadkhan202369.github.io/Martin/">
                         <h4>2022</h4>
                         <h5>Martin Briceno</h5>
                         <h6>A Digital Designer</h6>
                         <div id="sliding-div"></div>
                     </a>
-                    <a target="_blank" href="https://arbazkhan7547.github.io/age-of-union/">
-                        <h4>2022</h4>
-                        <h5>Age Of Union</h5>
-                        <h6>Age of union.</h6>
+                    <a target="_blank" href="https://asadkhan202369.github.io/Healtny/">
+                        <h4>2023</h4>
+                        <h5>Healtny</h5>
+                        <h6>Healthy Food Selling Website</h6>
                         <div id="sliding-div"></div>
                     </a>
-                    <a target="_blank" href="#">
-                        <h4>2022</h4>
-                        <h5>Huy Phan</h5>
-                        <h6>Independent Designer</h6>
+                    <a target="_blank" href="https://asadkhan202369.github.io/Edu/">
+                        <h4>2023</h4>
+                        <h5>Skillex</h5>
+                        <h6>An Education Platform</h6>
                         <div id="sliding-div"></div>
                     </a>
-                    <a target="_blank" href="https://arbazkhan7547.github.io/This-Is-Digital/">
-                        <h4>2022</h4>
-                        <h5>This is Digital</h5>
-                        <h6>Digital Agency</h6>
+                    <a target="_blank" href="https://asadkhan202369.github.io/watch/">
+                        <h4>2023</h4>
+                        <h5>Zullu Time</h5>
+                        <h6>A watch Selling Website</h6>
                         <div id="sliding-div"></div>
                     </a>
-                    <a target="_blank" href="#">
-                        <h4>2022</h4>
-                        <h5>Abhishek jha</h5>
-                        <h6>Visual Designer</h6>
-                        <div id="sliding-div"></div>
-                    </a>
-                    <a target="_blank" href="#">
-                        <h4>2022</h4>
-                        <h5>Lagunitas</h5>
-                        <h6>Beer Brand</h6>
-                        <div id="sliding-div"></div>
-                    </a>
-                    <a target="_blank" href="https://arbazkhan7547.github.io/plasticbionic-website/">
-                        <h4>2022</h4>
-                        <h5>Plasticbionic</h5>
-                        <h6>Awwwards Website</h6>
-                        <div id="sliding-div"></div>
-                    </a>
+                   
     
                 </div>
             </div>
