--- a/indexw.html
+++ b/indexw.html
@@ -16,7 +16,7 @@
             <i class="ri-close-line"></i>
             <img src="./asadlogo.png" alt="">
             <a href="./index.html"><h5>arbaz</h5></a>
-            <a href="./index.html"><h6>front end developer</h6></a>
+            <a href="./index.html"><h6>full stack developer</h6></a>
         </div>
         <div class="navrows">
             <div class="rows">
@@ -36,7 +36,7 @@
             <a href="https://www.linkedin.com/in/arbaz-khan-73910023a/">
                 <i class="ri-linkedin-fill"></i>
             </a>
-            <a href="https://github.com/Arbazkhan7547">
+            <a href="https://github.com/asadKhan202369">
                 <i class="ri-github-fill"></i>
             </a>
             <a href="https://www.instagram.com/khan_sahab_ak_12_/">
@@ -59,7 +59,7 @@
                 <div id="logo">
                    <img src="./asadlogo.png" alt="">
                     <a href="./index.html"><h5>arbaz</h5></a>
-                    <a href="./index.html"><h6>front end developer</h6></a>
+                    <a href="./index.html"><h6>full stack developer</h6></a>
                 </div>
                 <div class="navrows">
                     <div class="rows">
@@ -82,7 +82,7 @@
                     <a href="https://www.linkedin.com/in/arbaz-khan-73910023a/">
                         <i class="ri-linkedin-fill"></i>
                     </a>
-                    <a href="https://github.com/Arbazkhan7547">
+                    <a href="https://github.com/asadKhan202369">
                         <i class="ri-github-fill"></i>
                     </a>
                     <a href="https://www.instagram.com/khan_sahab_ak_12_/">
