--- a/indexc.html
+++ b/indexc.html
@@ -16,7 +16,7 @@
             <i class="ri-close-line"></i>
             <img src="./asadlogo.png" alt="">
             <a href="./index.html"><h5>arbaz</h5></a>
-            <a href="./index.html"><h6>front end developer</h6></a>
+            <a href="./index.html"><h6>full stack developer</h6></a>
         </div>
         <div class="navrows">
             <div class="rows">
@@ -36,7 +36,7 @@
             <a href="https://www.linkedin.com/in/arbaz-khan-73910023a/">
                 <i class="ri-linkedin-fill"></i>
             </a>
-            <a href="https://github.com/Arbazkhan7547">
+            <a href="https://github.com/asadKhan202369">
                 <i class="ri-github-fill"></i>
             </a>
             <a href="https://www.instagram.com/khan_sahab_ak_12_/">
@@ -58,7 +58,7 @@
                 <div id="logo">
                     <img src="./asadlogo.png" alt="">
                     <a href="./index.html"><h5>arbaz</h5></a>
-                    <a href="./index.html"><h6>front end developer</h6></a>
+                    <a href="./index.html"><h6>full stack developer</h6></a>
                 </div>
                 <div class="navrows">
                     <div class="rows">
@@ -78,7 +78,7 @@
                     <a href="https://www.linkedin.com/in/arbaz-khan-73910023a/">
                         <i class="ri-linkedin-fill"></i>
                     </a>
-                    <a href="https://github.com/Arbazkhan7547">
+                    <a href="https://github.com/asadKhan202369">
                         <i class="ri-github-fill"></i>
                     </a>
                     <a href="https://www.instagram.com/khan_sahab_ak_12_/">
@@ -115,14 +115,11 @@
                     </div>
                     <div id="s2">
                         <div id="s3" class="social">
-                            <h3>Portfolio</h3>
+                            <h3>Contact</h3>
                             <div id="rs" class="s">
+                            
                                 <div class="s1">
-                                    <a href="#">Dribble</a>
-                                    <div class="line"></div>
-                                </div>
-                                <div class="s1">
-                                    <a href="#">Behance</a>
+                                    <a href="#">8962834895</a>
                                     <div class="line"></div>
                                 </div>
                             </div>
